--- a/drum_machine.html
+++ b/drum_machine.html
@@ -88,55 +88,55 @@
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-0" onclick="play('Q')">
     Q
-    <audio src="./clip/song1.mp3" class="clip" id="Q">
+    <audio src="song1.mp3" class="clip" id="Q">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-1" onclick="play('W')">
     W
-    <audio src="./clip/song2.mp3" class="clip" id="W">
+    <audio src="song2.mp3" class="clip" id="W">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-2" onclick="play('E')">
     E
-    <audio src="./clip/song3.mp3" class="clip" id="E">
+    <audio src="song3.mp3" class="clip" id="E">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-3" onclick="play('A')">
     A
-    <audio src="./clip/song4.mp3" class="clip" id="A">
+    <audio src="song4.mp3" class="clip" id="A">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-4" onclick="play('S')">
     S
-    <audio src="./clip/song5.mp3" class="clip" id="S">
+    <audio src="song5.mp3" class="clip" id="S">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-5" onclick="play('D')">
     D
-    <audio src="./clip/song6.mp3" class="clip" id="D">
+    <audio src="song6.mp3" class="clip" id="D">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-6" onclick="play('Z')">
     Z
-    <audio src="./clip/song7.mp3" class="clip" id="Z">
+    <audio src="song7.mp3" class="clip" id="Z">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-7" onclick="play('X')">
     X
-    <audio src="./clip/song8.mp3" class="clip" id="X">
+    <audio src="song8.mp3" class="clip" id="X">
     </button>
 
 
     <button class="drum-pad btn btn-block btn-primary" id="drum-8" onclick="play('C')">
     C
-    <audio src="./clip/song9.mp3" class="clip" id="C">
+    <audio src="song9.mp3" class="clip" id="C">
     </button>
 
 
